Update API routes to be easier to remember + Remove some questions from README + Fix page z-index problem with small devices and long content + Added type to weather component + Add start for config page

--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -97,6 +97,7 @@ a {
   max-width: calc(100% - 4rem);
   height: 100%;
   margin: 2rem;
+  padding-top: 7rem; // Get from vars (and navbar height)
   animation: fadeIn 1s ease-in;
 }
 
